# trombinoscope

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix  justfile  rust-toolchain.toml
docs/: 404.html
docs/assets/dioxus/: trombinoscope.js  trombinoscope_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: crop.rs  lib.rs  main.rs  util.rs
ugly-install-hack/: 1-install-hack-to-shared-drive.sh  2-copy-to-local-set-x-run.sh  README.md
